# HW01_Robotic_Technology

install/: local_setup.sh  setup.sh
install/robot_description/lib/robot_description/: frame_id_converter_node  motor_command_node
install/robot_description/share/robot_description/: local_setup.sh  package.sh
install/robot_description/share/robot_description/config/: gz_bridge.yaml
install/robot_description/share/robot_description/launch/: display.launch.py  gazebo.launch.py
install/robot_description/share/robot_description/rviz/: display.rviz  gazebo.rviz
install/robot_estimation/lib/robot_estimation/: bias_correct_imu_node  complementary_yaw_node  diff_drive_controller_node  low_pass_filter_node  motion_model_odom_node  motor_command_node
install/robot_estimation/share/robot_estimation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_estimation/share/robot_estimation/scripts/: bias_correct_imu.cpp  complementary_yaw_node.cpp  motion_model_odom.cpp  motor_command.cpp
install/robot_nav/lib/robot_nav/: complementary_position_node  data_node
install/robot_nav/share/robot_nav/: package.sh
install/robot_nav/share/robot_nav/launch/: nav.launch.py
install/robot_nav/share/robot_nav/scripts/: bias_correct.cpp  lpf.cpp
log/: latest_build
src/robot_description/launch/: gazebo.launch.py
src/robot_description/src/description/: robot.urdf
src/robot_estimation/: CMakeLists.txt  package.xml
src/robot_estimation/launch/: estimator.launch.py
src/robot_estimation/scripts/: diff_drive_controller.cpp  low_pass_filter.cpp
src/robot_nav/: CMakeLists.txt
src/robot_nav/launch/: nav.launch.py
src/robot_nav/rviz/: display.rviz
src/robot_nav/scripts/: complementary_position.cpp  inforcment.cpp
